--- a/configure.phtml
+++ b/configure.phtml
@@ -13,6 +13,12 @@
 			<input type="checkbox" name="image_cache_url_encode" id="image_cache_url_encode" value="1" <?php echo (FreshRSS_Context::$user_conf->image_cache_url_encode ? 'checked' : ''); ?>>
 		</div>
 	</div>
+    <div class="form-group">
+        <label class="group-name" for="image_cache_disabled_url"><?php echo _t('ext.imagecache.cache_disabled_url'); ?></label>
+        <div class="group-controls">
+            <input type="text" name="image_cache_disabled_url" id="image_cache_disabled_url" value="<?php echo FreshRSS_Context::$user_conf->image_cache_disabled_url; ?>">
+        </div>
+    </div>
 	<h3>FreshRSS notification settings</h3>
 	<div class="form-group">
 		<label class="group-name" for="image_cache_post_url"><?php echo _t('ext.imagecache.post_url'); ?></label>
