--- a/configure.phtml
+++ b/configure.phtml
@@ -14,6 +14,12 @@
 		</div>
 	</div>
     <div class="form-group">
+        <label class="group-name" for="image_recache_url"><?php echo _t('ext.imagecache.image_recache_url'); ?></label>
+        <div class="group-controls">
+            <input type="text" name="image_recache_url" id="image_recache_url" value="<?php echo FreshRSS_Context::$user_conf->image_recache_url; ?>">
+        </div>
+    </div>
+    <div class="form-group">
         <label class="group-name" for="image_cache_disabled_url"><?php echo _t('ext.imagecache.cache_disabled_url'); ?></label>
         <div class="group-controls">
             <input type="text" name="image_cache_disabled_url" id="image_cache_disabled_url" value="<?php echo FreshRSS_Context::$user_conf->image_cache_disabled_url; ?>">
