--- a/configure.phtml
+++ b/configure.phtml
@@ -4,38 +4,38 @@
 	<div class="form-group">
 		<label class="group-name" for="image_cache_url"><?php echo _t('ext.imagecache.cache_url'); ?></label>
 		<div class="group-controls">
-			<input type="url" name="image_cache_url" id="image_cache_url" value="<?php echo FreshRSS_Context::$user_conf->image_cache_url; ?>">
+			<input type="url" name="image_cache_url" id="image_cache_url" value="<?php echo FreshRSS_Context::userConf()->param('image_cache_url'); ?>">
 		</div>
 	</div>
 	<div class="form-group">
 		<label class="group-name" for="image_cache_url_encode"><?php echo _t('ext.imagecache.url_encode'); ?></label>
 		<div class="group-controls">
-			<input type="checkbox" name="image_cache_url_encode" id="image_cache_url_encode" value="1" <?php echo (FreshRSS_Context::$user_conf->image_cache_url_encode ? 'checked' : ''); ?>>
+			<input type="checkbox" name="image_cache_url_encode" id="image_cache_url_encode" value="1" <?php echo (FreshRSS_Context::userConf()->param('image_cache_url_encode') ? 'checked' : ''); ?>>
 		</div>
 	</div>
     <div class="form-group">
         <label class="group-name" for="image_recache_url"><?php echo _t('ext.imagecache.image_recache_url'); ?></label>
         <div class="group-controls">
-            <input type="text" name="image_recache_url" id="image_recache_url" value="<?php echo FreshRSS_Context::$user_conf->image_recache_url; ?>">
+            <input type="text" name="image_recache_url" id="image_recache_url" value="<?php echo FreshRSS_Context::userConf()->param('image_recache_url'); ?>">
         </div>
     </div>
     <div class="form-group">
         <label class="group-name" for="image_cache_disabled_url"><?php echo _t('ext.imagecache.cache_disabled_url'); ?></label>
         <div class="group-controls">
-            <input type="text" name="image_cache_disabled_url" id="image_cache_disabled_url" value="<?php echo FreshRSS_Context::$user_conf->image_cache_disabled_url; ?>">
+            <input type="text" name="image_cache_disabled_url" id="image_cache_disabled_url" value="<?php echo FreshRSS_Context::userConf()->param('image_cache_disabled_url'); ?>">
         </div>
     </div>
 	<h3>FreshRSS notification settings</h3>
 	<div class="form-group">
 		<label class="group-name" for="image_cache_post_url"><?php echo _t('ext.imagecache.post_url'); ?></label>
 		<div class="group-controls">
-			<input type="url" name="image_cache_post_url" id="image_cache_post_url" value="<?php echo FreshRSS_Context::$user_conf->image_cache_post_url; ?>">
+			<input type="url" name="image_cache_post_url" id="image_cache_post_url" value="<?php echo FreshRSS_Context::userConf()->param('image_cache_post_url'); ?>">
 		</div>
 	</div>
 	<div class="form-group">
 		<label class="group-name" for="image_cache_access_token"><?php echo _t('ext.imagecache.access_token'); ?></label>
 		<div class="group-controls">
-			<input type="text" name="image_cache_access_token" id="image_cache_access_token" value="<?php echo FreshRSS_Context::$user_conf->image_cache_access_token; ?>">
+			<input type="text" name="image_cache_access_token" id="image_cache_access_token" value="<?php echo FreshRSS_Context::userConf()->param('image_cache_access_token'); ?>">
 		</div>
 	</div>
 	<div class="form-group form-actions">
