--- a/configure.phtml
+++ b/configure.phtml
@@ -22,7 +22,7 @@
     <div class="form-group">
         <label class="group-name" for="video_default_volume"><?php echo _t('ext.imagecache.video_default_volume'); ?></label>
         <div class="group-controls">
-            <input type="number" step="0.01" min="0" max="1" name="video_default_volume" id="video_default_volume" value="<?php echo $this->settings->$this->settings->getVideoDefaultVolume(); ?>">
+            <input type="number" step="0.01" min="0" max="1" name="video_default_volume" id="video_default_volume" value="<?php echo $this->settings->getVideoDefaultVolume(); ?>">
         </div>
     </div>
 	<h3>Cache host settings</h3>
