--- a/configure.phtml
+++ b/configure.phtml
@@ -25,6 +25,18 @@
             <input type="number" step="0.01" min="0" max="1" name="video_default_volume" id="video_default_volume" value="<?php echo $this->settings->getVideoDefaultVolume(); ?>">
         </div>
     </div>
+    <div class="form-group">
+        <label class="group-name" for="upload_retry_count"><?php echo _t('ext.imagecache.upload_retry_count'); ?></label>
+        <div class="group-controls">
+            <input type="number" step="1" min="0" max="100" name="upload_retry_count" id="upload_retry_count" value="<?php echo $this->settings->getUploadRetryCount(); ?>">
+        </div>
+    </div>
+    <div class="form-group">
+        <label class="group-name" for="max_cache_elements"><?php echo _t('ext.imagecache.max_cache_elements'); ?></label>
+        <div class="group-controls">
+            <input type="number" step="1" min="1" max="999999" name="max_cache_elements" id="max_cache_elements" value="<?php echo $this->settings->getMaxCacheElements(); ?>">
+        </div>
+    </div>
 	<h3>Cache host settings</h3>
 	<div class="form-group">
 		<label class="group-name" for="image_cache_post_url"><?php echo _t('ext.imagecache.post_url'); ?></label>
