--- a/configure.phtml
+++ b/configure.phtml
@@ -56,6 +56,12 @@
 			<input type="text" name="image_cache_access_token" id="image_cache_access_token" value="<?php echo $this->settings->getImageCacheAccessToken(); ?>">
 		</div>
 	</div>
+	<div class="form-group">
+		<label class="group-name" for="image_cache_remove_wrong_tag"><?php echo _t('ext.imagecache.remove_wrong_tag'); ?></label>
+		<div class="group-controls">
+			<input type="text" name="image_cache_remove_wrong_tag" id="image_cache_remove_wrong_tag" value="<?php echo $this->settings->isRemoveWrongTag(); ?>">
+		</div>
+	</div>
 	<div class="form-group form-actions">
 		<div class="group-controls">
 			<button type="submit" class="btn btn-important"><?php echo _t('gen.action.submit'); ?></button>
